<resources>
    <string name="app_name">天天防腐</string>

    <!-- 主页的底部指示器的文字 -->
    <string name="rb_home">首页</string>
    <string name="rb_collect">收藏</string>
    <string name="tv_publish">发布消息</string>
    <string name="rb_message">消息</string>
    <string name="rb_personal">个人中心</string>

    <!--————————————————————————-->

    <!-- HomeFragment 中的 item 的文字 -->
    <string name="ll_labour_title">劳务</string>
    <string name="ll_labour_text">找信息、找团队、找工人</string>
    <string name="ll_insurance_title">保险</string>
    <string name="ll_insurance_text">按天买的意外保险</string>
    <string name="ll_technology_title">技术</string>
    <string name="ll_technology_text">找技术专家解决技术难题</string>
    <string name="ll_equipment_title">设备</string>
    <string name="ll_equipment_text">闲置设备租赁、买卖</string>
    <string name="ll_league_title">加盟</string>
    <string name="ll_league_text">个人加盟、企业聘证、联营企业</string>
    <string name="ll_cost_title">成本交流</string>
    <string name="ll_cost_text">工程成本讨论</string>

    <string name="tv_recommend">推荐企业</string>
    <string name="tv_hot_info">热点资讯</string>

    <!--————————————————————————-->

    <!-- PersonalFragment 用户头部的用户名的文字大小 -->
    <string name="personal_fragment_head_user_name">用户名</string>
    <string name="personal_fragment_head_user_region">地区</string>
    <string name="personal_fragment_head_user_no_login">登录/注册</string>

    <!-- PersonalFragment 中的 item 的文字 -->
    <string name="ll_purchase_records">购买记录</string>
    <string name="ll_my_order">我的订单</string>
    <string name="ll_my_publish">我的发布</string>
    <string name="ll_worker_manager_center">工人管理中心</string>
    <string name="ll_team_manager_center">团队管理中心</string>
    <string name="ll_technology_manger_center">技术管理中心</string>

    <!-- PersonalFragment 中的底部问题的文字-->
    <string name="personal_fragment_night_mode_text">夜间模式</string>
    <string name="personal_fragment_problem_list_text">常见问题</string>
    <string name="personal_fragment_check_update_text">检查更新</string>
    <string name="personal_fragment_exit_login">退出登录</string>


    <!--————————————————————————-->

    <!-- UserLoginActivity 页面中的的标题栏标题文字 -->
    <string name="activity_user_login_title_bar_text">登录</string>
    <!-- UserLoginActivity 页面中的的标题栏右边的文字 -->
    <string name="activity_user_login_title_bar_right_text">注册</string>


    <!-- UserLoginActivity 中的用户输入框的hint文字-->
    <string name="activity_user_login_user_hint">手机号码</string>
    <!-- UserLoginActivity 中的用户输入框的hint文字-->
    <string name="activity_user_login_password_hint">密码</string>
    <!-- UserLoginActivity 中的登录按钮的文字-->
    <string name="activity_user_login_button">登录</string>
    <!-- UserLoginActivity 中的忘记密码的文字-->
    <string name="activity_user_login_forget_password">忘记密码？</string>
    <!-- UserLoginActivity 中的手机快捷登录的文字-->
    <string name="activity_user_login_phone_login">手机快捷登录</string>


    <!--————————————————————————-->

    <!-- 注册页面中的的标题文字 -->
    <string name="activity_user_register_title_bar_text">注册</string>

    <!-- UserRegisterActivity 中的手机号码输入框的文字-->
    <string name="activity_user_register_input_phone_text">请输入手机号码</string>
    <!-- UserRegisterActivity 中的验证码输入框的文字-->
    <string name="activity_user_register_input_code_text">请输入验证码</string>
    <!-- UserRegisterActivity 中的密码输入框的文字-->
    <string name="activity_user_register_input_password_text">请输入6~18位密码</string>

    <!-- UserRegisterActivity 中的获取验证码按钮的文字-->
    <string name="activity_user_register_button_get_code_text">获取验证码</string>
    <!-- UserRegisterActivity 中的注册按钮的文字-->
    <string name="activity_user_register_button_confirm_text">注册</string>

    <!-- UserRegisterActivity 中的获取验证码失败的文字-->
    <string name="activity_user_register_code_get_fail_text">网络不好，请重试</string>

    <!-- UserRegisterActivity 中的无网络连接的文字-->
    <string name="activity_user_register_internet_error_text">请检查你的网络</string>


    <!--————————————————————————-->

    <string name="activity_user_info_title_bar">用户信息</string>
    <string name="activity_user_info_head">头像：</string>
    <string name="activity_user_info_qr_code">我的二维码：</string>
    <string name="activity_user_real_check">实名认证</string>
    <string name="activity_user_info_phone">手机号码</string>
    <string name="activity_user_info_base_data">基本资料</string>
    <string name="activity_user_info_name">姓名：</string>
    <string name="activity_user_info_input_name">请输入姓名：</string>
    <string name="activity_user_info_sex">性别：</string>
    <string name="activity_user_info_input_sex">请选择性别：</string>
    <string name="activity_user_info_birth">出生日期：</string>
    <string name="activity_user_info_input_birth">请选择出生日期：</string>
    <string name="activity_user_info_address">籍贯：</string>
    <string name="activity_user_info_input_address">请选择籍贯：</string>
    <string name="activity_user_info_commit_tip">资料一旦提交后就不允许修改</string>
    <string name="activity_user_info_commit_button">提 交</string>
    <string name="activity_user_info_phone_change"><u>更换</u></string>


    <!--————————————————————————-->

    <!-- 选择图片的对话框的文字 -->
    <string name="dialog_choose_photo_form_phone">从手机选择</string>
    <string name="dialog_choose_photo_form_camera">拍照</string>
    <string name="dialog_choose_photo_cancel">取消</string>

    <!--————————————————————————-->

    <!-- 充值金币界面的颜色集合 -->
    <string name="activity_recharge_title_text">购买金币</string>
    <string name="activity_recharge_headline_purchase_coin">输入金币数量</string>
    <string name="activity_recharge_coin_coin_num">金币数量：</string>
    <string name="activity_recharge_coin_num_input_text">输入金币数量</string>
    <string name="activity_recharge_coin_num_tip">10金币 = 1元</string>
    <string name="activity_recharge_headline_pay_mode">支付方式</string>
    <string name="activity_recharge_pay_mode_alipay">支付宝支付</string>
    <string name="activity_recharge_pay_mode_wxpay">微信支付</string>
    <string name="activity_recharge_coin_confirm_pay_text">立即支付</string>

    <string name="activity_recharge_coin_pay_success">支付成功</string>
    <string name="activity_recharge_coin_pay_fail">支付失败</string>
    <string name="activity_recharge_coin_lose_login">登录过期，请你重新登录</string>

    <!--————————————————————————-->

    <!-- MyCoinActivity界面的文字集合 -->
    <string name="activity_my_coin_title_bar_text">我的金币</string>
    <string name="activity_my_coin_title_bar_right_text">账单</string>
    <string name="activity_my_coin_num_desc_text">当前金币(个)</string>
    <string name="activity_my_coin_number_text">0</string>

    <!--————————————————————————-->

</resources>
