<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_advertise"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="#37c268" />

        <LinearLayout style="@style/home_fragment_row_style">

            <LinearLayout
                android:id="@+id/ll_labour"
                style="@style/home_fragment_row_item_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/labour_icon" />

                <TextView
                    style="@style/home_fragment_row_item_title_style"
                    android:text="@string/ll_labour_title" />

                <TextView
                    style="@style/home_fragment_row_item_text_style"
                    android:text="@string/ll_labour_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_insurance"
                style="@style/home_fragment_row_item_style"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/insurance_icon" />

                <TextView
                    style="@style/home_fragment_row_item_title_style"
                    android:text="@string/ll_insurance_title" />

                <TextView
                    style="@style/home_fragment_row_item_text_style"
                    android:text="@string/ll_insurance_text" />
            </LinearLayout>

            <LinearLayout style="@style/home_fragment_row_item_style">

                <ImageView
                    android:id="@+id/ll_technology"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/technology_icon" />

                <TextView
                    style="@style/home_fragment_row_item_title_style"
                    android:text="@string/ll_technology_title" />

                <TextView
                    style="@style/home_fragment_row_item_text_style"
                    android:text="@string/ll_technology_text" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout style="@style/home_fragment_row_style">

            <LinearLayout
                android:id="@+id/ll_equipment"
                style="@style/home_fragment_row_item_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/equipment_icon" />

                <TextView
                    style="@style/home_fragment_row_item_title_style"
                    android:text="@string/ll_equipment_title" />

                <TextView
                    style="@style/home_fragment_row_item_text_style"
                    android:text="@string/ll_equipment_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_league"
                style="@style/home_fragment_row_item_style"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/league_icon" />

                <TextView
                    style="@style/home_fragment_row_item_title_style"
                    android:text="@string/ll_league_title" />

                <TextView
                    style="@style/home_fragment_row_item_text_style"
                    android:text="@string/ll_league_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cost"
                style="@style/home_fragment_row_item_style">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cost_exchange" />

                <TextView
                    style="@style/home_fragment_row_item_title_style"
                    android:text="@string/ll_cost_title" />

                <TextView
                    style="@style/home_fragment_row_item_text_style"
                    android:text="@string/ll_cost_text" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:text="@string/tv_recommend"
            style="@style/home_fragment_content_heading" />

        <ImageView
            android:id="@+id/iv_recommend"
            android:background="#77ede7"
            android:layout_width="match_parent"
            android:layout_height="160dp" />

        <TextView
            android:text="@string/tv_hot_info"
            style="@style/home_fragment_content_heading"
            android:layout_marginTop="1dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_hot_info"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</ScrollView>
