<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_main_bg"
    tools:context="com.ytempest.daydayantis.activity.MainActivity">

    <com.ytempest.baselibrary.view.NotScrollViewPager
        android:id="@+id/vp_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:background="@color/rg_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/radio_button_style"
            android:checked="true"
            android:drawableTop="@drawable/selector_rb_home"
            android:text="@string/rb_home" />

        <RadioButton
            android:id="@+id/rb_collect"
            style="@style/radio_button_style"
            android:drawableTop="@drawable/selector_rb_collect"
            android:text="@string/rb_collect" />

        <LinearLayout
            android:id="@+id/ll_publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_indicator_publish" />

            <TextView
                android:layout_marginTop="3dp"
                style="@style/bottom_indicator_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_publish" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/radio_button_style"
            android:drawableTop="@drawable/selector_rb_message"
            android:text="@string/rb_message" />

        <RadioButton
            android:id="@+id/rb_personal"
            style="@style/radio_button_style"
            android:drawableTop="@drawable/selector_rb_personal"
            android:text="@string/rb_personal" />
    </RadioGroup>

</LinearLayout>
