<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_user_login_root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_user_login_bg"
    android:orientation="vertical"
    tools:context="com.ytempest.daydayantis.activity.UserLoginActivity">

    <LinearLayout
        style="@style/user_login_input_container_style"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_input_user"
            style="@style/user_login_input_et_style"
            android:drawableLeft="@drawable/login_user_name_icon"
            android:hint="@string/activity_user_login_user_hint"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout style="@style/user_login_input_container_style">

        <EditText
            android:id="@+id/et_input_password"
            style="@style/user_login_input_et_style"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:drawableLeft="@drawable/login_user_password_icon"
            android:hint="@string/activity_user_login_password_hint"
            android:inputType="textPassword" />

        <CheckBox
            android:checked="false"
            android:id="@+id/cb_password_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_check_password"
            android:layout_marginRight="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/selector_green_button_bg"
        android:text="@string/activity_user_login_button"
        android:textColor="@color/activity_user_login_button_text"
        android:textSize="@dimen/activity_user_login_button_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/activity_user_login_forget_password_size"
            android:text="@string/activity_user_login_forget_password"
            android:textColor="@color/activity_user_login_forget_password_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/activity_user_login_phone_login_size"
            android:text="@string/activity_user_login_phone_login"
            android:textColor="@color/activity_user_login_phone_login_text" />
    </RelativeLayout>


</LinearLayout>
